Added mobile optimization to the Home styles.sass

--- a/client/src/pages/Home/styles.sass
+++ b/client/src/pages/Home/styles.sass
@@ -6,6 +6,7 @@
   align-items: center
   height: 100%
   user-select: none
+  flex-wrap: wrap
 
   .info-area
     padding: 1rem 1.5rem
@@ -70,3 +71,7 @@
   h2
     margin: 0
     text-align: center
+
+@media screen and (max-width: 1130px)
+  .create-btn
+    display: none
