--- a/client/src/pages/Imprint/styles.sass
+++ b/client/src/pages/Imprint/styles.sass
@@ -40,3 +40,19 @@
     text-decoration: none
     &:hover
       text-decoration: underline
+
+@media screen and (max-width: 600px)
+  .legal-page
+    margin-left: 2rem
+    margin-right: 2rem
+    margin-top: 2rem
+    h1
+      font-size: 2rem
+    h2
+      font-size: 1.5rem
+    h3
+      font-size: 1.2rem
+    h4
+      font-size: 1rem
+    p
+      font-size: 1rem
