Added mobile optimization to the Header styles.sass

--- a/client/src/common/components/Header/styles.sass
+++ b/client/src/common/components/Header/styles.sass
@@ -9,5 +9,14 @@ header
   svg
     font-size: 26pt
 
+  h1
+    margin: 0
+
 header *
   z-index: 2
+
+@media screen and (max-width: 500px)
+  header svg
+    font-size: 18pt
+  header h1
+    font-size: 1.5rem
