Added the company capital to the Join styles.sass

--- a/client/src/pages/Join/styles.sass
+++ b/client/src/pages/Join/styles.sass
@@ -11,6 +11,15 @@
   .waiting-icon
     font-size: 3rem
 
+  .capital
+    padding: 1rem
+    position: absolute
+    top: 10vh
+
+
+    h2
+      margin: 0
+
   input
     padding: 0.8rem 1rem
     width: 14rem
