Added user-select to the Create styles.sass

--- a/client/src/pages/Create/styles.sass
+++ b/client/src/pages/Create/styles.sass
@@ -9,6 +9,7 @@
 
   .info-area
     width: 40rem
+    user-select: none
   .info-area h2
     font-size: 2.5rem
     font-weight: 800
@@ -16,6 +17,7 @@
 
   .info-area span
     color: $primary
+    user-select: text
 
   .qr-area
     background-color: $text
