--- a/client/src/pages/Home/styles.sass
+++ b/client/src/pages/Home/styles.sass
@@ -11,6 +11,7 @@
   .info-area
     padding: 1rem 1.5rem
     width: 21rem
+    animation: bounceIn 0.7s ease-out
 
     h2
       margin: 0
@@ -64,6 +65,8 @@
   gap: 1rem
   color: $text
   text-decoration: none
+  transition: 0.2s
+  animation: bounceIn 0.7s ease-out
 
   svg
     font-size: 38pt
