Added a fade animation in the Game styles.sass

--- a/client/src/pages/Game/styles.sass
+++ b/client/src/pages/Game/styles.sass
@@ -12,6 +12,19 @@
     font-size: 28pt
     font-weight: 700
     width: 50rem
+    animation: fadeHint 6s ease-in-out
+
 
     span
       color: $primary
+
+
+@keyframes fadeHint
+  0%
+    transform: scale(1)
+  65%
+    transform: scale(1)
+  70%
+    transform: scale(1.2)
+  100%
+    transform: scale(0.2)
