Updated the Home styles.sass

--- a/client/src/pages/Home/styles.sass
+++ b/client/src/pages/Home/styles.sass
@@ -75,6 +75,12 @@
     margin: 0
     text-align: center
 
+  &:hover
+    transform: scale(1.02) translateY(-0.5rem)
+
+  &:active
+    transform: scale(0.95) translateY(0.5rem)
+
 @media screen and (max-width: 1130px)
   .create-btn
     display: none
