Locked footer events when ingame

--- a/client/src/common/components/Footer/styles.sass
+++ b/client/src/common/components/Footer/styles.sass
@@ -57,6 +57,12 @@ footer
     &:hover
       text-decoration: underline
 
+.ingame
+  cursor: not-allowed
+
+  a
+    pointer-events: none
+
 footer *
   z-index: 2
 
