Updated the Game styles.sass

--- a/client/src/pages/Game/styles.sass
+++ b/client/src/pages/Game/styles.sass
@@ -12,7 +12,7 @@
     font-size: 28pt
     font-weight: 700
     width: 50rem
-    animation: fadeHint 6s ease-in-out
+    animation: fadeHint 6s ease-in 1
 
 
     span
