Fixed a bug in the Calculate styles.sass

--- a/client/src/pages/Game/states/Calculate/styles.sass
+++ b/client/src/pages/Game/states/Calculate/styles.sass
@@ -36,6 +36,9 @@
 
     .round-item:nth-child(1)
       width: 18rem
+
+    .round-item:nth-child(1) h2
+      width: 18rem
       text-overflow: ellipsis
       overflow: hidden
 
