Fixed a bug in the End styles.sass

--- a/client/src/pages/End/styles.sass
+++ b/client/src/pages/End/styles.sass
@@ -20,6 +20,9 @@
 
     .group-item:nth-child(1)
       width: 18rem
+
+    .group-item:nth-child(1) h2
+      width: 18rem
       text-overflow: ellipsis
       overflow: hidden
 
