Disabled the user-select in the info-area-content

--- a/client/src/pages/Game/states/Waiting/styles.sass
+++ b/client/src/pages/Game/states/Waiting/styles.sass
@@ -26,6 +26,7 @@
     .info-area-content
       padding: 1rem
       animation: fadeTextInOut 15s linear infinite
+      user-select: none
 
     h2
       margin: 0
