Updated the Join styles.sass

--- a/client/src/pages/Join/styles.sass
+++ b/client/src/pages/Join/styles.sass
@@ -13,17 +13,21 @@
 
   .capital
     padding: 1rem
-    position: absolute
+    margin-bottom: 2rem
     top: 10vh
     user-select: none
 
-
-    h2
+    h2, h3
       margin: 0
+
+    .in-red
+      color: $error
+    .in-green
+      color: $success
 
   input
     padding: 0.8rem 1rem
-    width: 14rem
+    width: 16rem
     font-size: 1rem
     color: $text
 
