Integrated the end state in the Calculate styles.sass

--- a/client/src/pages/Game/states/Calculate/styles.sass
+++ b/client/src/pages/Game/states/Calculate/styles.sass
@@ -18,6 +18,18 @@
   user-select: none
   align-items: center
 
+  .current-round
+    padding: 1rem 2rem
+
+    h2
+      font-size: 18pt
+      font-weight: 700
+      margin: 0
+
+  .button-area
+    display: flex
+    gap: 1rem
+
   .btn
     animation: roundIn 0.8s ease-out
 
