Updated the Waiting styles.sass

--- a/client/src/pages/Game/states/Waiting/styles.sass
+++ b/client/src/pages/Game/states/Waiting/styles.sass
@@ -8,6 +8,7 @@
   .waiting-area
     display: flex
     flex-direction: column
+    justify-content: center
     width: 21rem
     text-align: center
     user-select: none
