--- a/client/src/pages/Home/components/Dialog/styles.sass
+++ b/client/src/pages/Home/components/Dialog/styles.sass
@@ -32,11 +32,12 @@
 
     h2
       margin: 0
+      color: $primary
 
     hr
       width: 100%
       margin: 0
-      border: 1px solid $text
+      border: 1px solid $primary
       border-radius: 1rem
 
   .dialog-title
@@ -49,7 +50,7 @@
     display: flex
     flex-direction: column
     gap: 0.5rem
-    max-height: 20rem
+    max-height: 23rem
     overflow-y: scroll
     overflow-x: hidden
 
